pkg/lang/testdata/ub/manifest/invalid/replace-non-string.ub
replace: { 'github.com/x/y': 1 }
